--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -22,7 +22,7 @@ $maxwidth-2: #{550 / $rootsize-2}rem; // 550px wide
 $maxwidth-3: #{620 / $rootsize-3}rem; // 620px wide
 $maxwidth-4: #{700 / $rootsize-4}rem; // 700px wide
 
-// Add the typefaces here. Keep the fallbacks if you like.
+// Add the typefaces here. A Regular, Italic and Bold weight of a serif & Regular and Bold weight of a sans-serif are recommended to use. Keep the fallbacks if you like.
 $serif: Georgia, Times, serif;
 $sans-serif: Helvetica, Arial, sans-serif;
 
