--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -904,6 +904,16 @@ pre code {
   letter-spacing: 0.1rem;
 }
 
+.small-caps {
+  -moz-font-feature-settings: 'smcp=1, kern=1';
+  -ms-font-feature-settings: 'smcp' 1, 'kern' 1;
+  -webkit-font-feature-settings: 'smcp' 1, 'kern' 1;
+  -o-font-feature-settings: 'smcp' 1, 'kern' 1;
+  font-feature-settings: 'smcp' 1, 'kern' 1;
+  letter-spacing: 1px;
+  letter-spacing: 0.1rem;
+}
+
 .lining-numerals {
   -moz-font-feature-settings: 'lnum=1, kern=1';
   -ms-font-feature-settings: 'lnum' 1, 'kern' 1;
